--- a/config.yaml
+++ b/config.yaml
@@ -58,8 +58,8 @@ Menus:
     #   weight: 2
 
 params:
-  title: "Hugo Profile"
-  description: Text about my cool site
+  title: "Ibrahim Selman"
+  description: This is Ibrahim selman's personal and portfolio website
   # staticPath: ""  # The path to serve the static files from
   favicon: "/fav.png"
 
@@ -112,9 +112,9 @@ params:
     align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
     # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
     # showBrandLogo: false # Show brand logo in nav bar | default is true
-    brandName: "Hugo Profile" # Brand name for the brand | default is the title variable
+    brandName: "Ibrahim Selman" # Brand name for the brand | default is the title variable
     disableSearch: false
-    # searchPlaceholder: "Search"
+    searchPlaceholder: "Search my website"
     stickyNavBar:
       enable : true
       showOnScrollUp : true
@@ -131,48 +131,51 @@ params:
   hero:
     enable: true
     intro: "Hi, my name is"
-    title: "Isabella."
-    subtitle: "I build things for the web"
-    content: "A passionate web app developer. I tend to make use of modern web technologies to build websites that looks great, feels fantastic, and functions correctly."
+    title: "Ibrahim."
+    subtitle: "I build things for mobile and web"
+    content: "A passionate full-stack mobile app developer. I tend to make use of modern mobile technologies to build applications that looks great, feels fantastic, and functions correctly with robust backend."
     image: /images/hero.svg
     bottomImage:
       enable: true
     # roundImage: true # Make hero image circular | default false
     button:
       enable: true
-      name: "Resume"
-      url: "#"
+      # name: "Resume"
+      name: "More about me"
+      url: "#about"
       download: true
       newPage: false
     socialLinks:
       fontAwesomeIcons:
         - icon: fab fa-github
-          url: https://example.com
-        - icon: fab fa-x-twitter
-          url: https://example.com
-      customIcons:
-        - icon: /fav.png
-          url: "https://example.com"
+          url: https://github.com/master-8702
+        - icon: fab fa-linkedin
+          url: https://www.linkedin.com/in/ibrahim-selman/
+      # customIcons:
+      #   - icon: /fav.png
+      #     url: "https://example.com"
 
   # About
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.png"
+    image: "images/ibrahim_selman.jpg"
     content: |-
-      I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA.
+      I am a full-stack mobile app developer with 5+ years of general programming and 3+ years of mobile app development experience. I use Flutter and XML(Java) for front- end and Django and ASP.NET Core for the back-end. I have a Bachelor's degree in Computer Science. In the past years, I have developed more than 6 mobile apps, a couple of web apps and desktop apps including an E-commerce app, a media player, a messaging app, kids learning game and a queue management system.
+      
+      I also have experience working with C# Desktop app projects and Django web app projects. In my spare time I do penetration testing for web apps and mobile apps.
 
-      I am currently working on a project that will be used to help people find the best way to get around the city.
+       
     skills:
       enable: true
       title: "Here are a few technologies I've been working with recently:"
       items:
-        - "HTML"
-        - "CSS"
-        - "JavaScript"
-        - "React"
-        - "Node"
-        - "Express"
+        - "Flutter"
+        - "Kotlin"
+        - "java"
+        - "Django"
+        - "firebase"
+        - "Azure"
 
   # Experience
   # experience:
